--- a/neuroscience_sql_student_project.ipynb
+++ b/neuroscience_sql_student_project.ipynb
@@ -92,7 +92,9 @@
       "source": [
         "## *1.1 ER-model*\n",
         "\n",
-        "![ER-Model](https://raw.githubusercontent.com/letizia-z/neuroscience-sql-student-project/refs/heads/main/ER_sql.svg)"
+        "<img alt=\"png\" src=\"https://raw.githubusercontent.com/letizia-z/neuroscience-sql-student-project/refs/heads/main/ER_sql.png\" width=\"75%\">\n",
+        "\n",
+        "![svg](https://raw.githubusercontent.com/letizia-z/neuroscience-sql-student-project/refs/heads/main/ER_sql.svg)"
       ],
       "metadata": {
         "id": "YwRFmhF8TS2Z"
